--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <span class="dos">Me llamo</span>
       </div>
       <h1>Rowan Abisai</h1>
-      <h3>UI/UX <span>Desarrollador.</span></h3>
+      <h3>Estudiante de TI área de <span>Desarrollo de software.</span></h3>
       <p>Soy estudiante de la Universidad Tecnológica del Poniente de la<br> carrera de TI "Área de Desarrollo de
         Software Multiplataforma",<br>
         como estudiante, e tenido la experiencia en el desarrollo de<br> Sotfware con distintas herramientas que esta
